# openAudio

./: CMakeLists.txt  Main.cpp  build.sh
Sources/: Audio.cpp  Audio.hpp  Note.hpp  Voice.cpp  Voice.hpp
